# sdl_core_346_wince

./: CMakeLists.txt  README.md  baseline_SDL_core.xlsx  qnx_6.5.0_linux_x86.cmake
AppLink_SDL_Release/1.1.0.20161226/: smartDeviceLinkCore.lib
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/MessageBroker/: CMakeLists.txt
src/3rd_party-static/encryption/: CMakeLists.txt
src/3rd_party-static/gmock-1.7.0/: CMakeLists.txt
src/3rd_party-static/libusbx-1.0.16/: CMakeLists.txt
src/3rd_party-static/pthread-win32-2.9.1/: CMakeLists.txt
src/3rd_party-static/sqlite3-3.11.1/: CMakeLists.txt
src/appMain/: CMakeLists.txt  smartDeviceLink.ini
src/components/: CMakeLists.txt  test_main.cc
src/components/HMI/: index.html
src/components/HMI/app/: Flags.js
src/components/HMI/app/controller/: InfoController.js  MediaController.js  PhoneController.js  SettingsController.js
src/components/HMI/app/view/: WarningView.js  infoView.js
src/components/HMI/app/view/home/: statusMediaView.js  statusPhoneView.js  topControls.js
src/components/HMI/app/view/phone/: dialpadView.js
src/components/HMI/css/: media.css  phone.css  settings.css
src/components/application_manager/: CMakeLists.txt
src/components/config_profile/: CMakeLists.txt
src/components/connection_handler/: CMakeLists.txt
src/components/hmi_message_handler/: CMakeLists.txt
src/components/interfaces/: CMakeLists.txt  MOBILE_API.xml
src/components/media_manager/: CMakeLists.txt
src/components/media_manager/src/: callback_streamer_adapter.cc
src/components/policy/src/policy/: CMakeLists.txt
src/components/policy/src/policy/usage_statistics/: CMakeLists.txt
src/components/protocol_handler/: CMakeLists.txt
src/components/qt_hmi/: CMakeLists.txt
src/components/resumption/: CMakeLists.txt
src/components/security_manager/: CMakeLists.txt
src/components/smart_objects/: CMakeLists.txt
src/components/telemetry_monitor/: CMakeLists.txt
src/components/transport_manager/: CMakeLists.txt
src/components/utils/: CMakeLists.txt
